src/objects/KenanServiceConnection__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillRefNo_BillRefResets_delimiter__c</fullName>
        <defaultValue>&quot;.&quot;</defaultValue>
        <label>BillRefNo BillRefResets delimiter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_URL__c</fullName>
        <label>Connection URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Default_Account_External_IdType__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>Default Account External IdType</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Currency_Code__c</fullName>
        <defaultValue>&quot;EUR&quot;</defaultValue>
        <inlineHelpText>Enter the Default Kenan Currency Code</inlineHelpText>
        <label>Default Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Service_External_IdType__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>Default Service External IdType</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REST_Application_Base__c</fullName>
        <defaultValue>&quot;/kenan-salesforce-api&quot;</defaultValue>
        <inlineHelpText>must start with /</inlineHelpText>
        <label>REST Application Base</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Timeout__c</fullName>
        <defaultValue>&quot;120000&quot;</defaultValue>
        <inlineHelpText>Number in milliseconds</inlineHelpText>
        <label>Session Timeout</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stored_Language_Code__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <description>When an enumeration is converted to display value, we need to understand what the stored language value is.</description>
        <label>Stored Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>KenanServiceConnection</label>
</CustomObject>